2003-10-29  Lutz Mueller <lutz@users.sourceforge.net>

	* library.c: Substitute memcpy by for (...) { (...) } on 
	  request of Theodore Kilgore <kilgota@banach.math.auburn.edu>.

2003-10-29  Lutz Mueller <lutz@users.sourceforge.net>

	* sq905.[c.h]: Patch by Thodore Kilgore
	  <kilgota@banach.math.auburn.edu>: Introduce new SQ_MODEL_PRECISION.

2003-10-29  Lutz Mueller <lutz@users.sourceforge.net>

	* library.c: Patch by Theodore Kilgore
	  <kilgota@banach.math.auburn.edu>: Fix postprocessing of files
	  where comp_ration != 2.

2003-10-10  Lutz Mueller <lutz@users.sourceforge.net>

	* library.c: Patch by Theodore Kilgore
	  <kilgota@banach.math.auburn.edu>: Allocate enough bytes for
	  image data _and_ header.

2003-10-07  Lutz Mueller <lutz@users.sourceforge.net>

	* sq905.c: Patch by Theodore Kilgore <kilgota@banach.math.auburn.edu>,
	  without ChangeLog entry, unfortunately not against latest cvs, and
	  not in 'cvs diff -u3 -p' format. Hence no guaranty that I figured
	  out the right lines and the right changes. No idea if the code
	  now works better than before. But it compiles :-)

2003-08-01  Lutz Mueller <lutz@users.sourceforge.net>

	* sq905.c: Additional information by Paulo Tribolet Abreu
	  <paulotex@gmx.net>.

2003-08-01  Lutz Mueller <lutz@users.sourceforge.net>

	* sq905.c: Additional information by Paulo Tribolet Abreu
	  <paulotex@gmx.net>.

2003-07-30  Lutz Mueller <lutz@users.sourceforge.net>

	* library.c: Move some variables around to make non-gcc-compilers happy.

2003-07-15  Lutz Mueller <lutz@users.sourceforge.net>

	* sq905.[c]: Some indentation fixes.
	  (sq_read_data): Theodore Kilgore
	  <kilgota@banach.math.auburn.edu> tells me that the
	  gp_port_write and gp_port_set_timeout is not needed here.

2003-07-12  Lutz Mueller <lutz@users.sourceforge.net>

	* library.c
	* sq905.[c,h]: New code by Theodore Kilgore
	  <kilgota@banach.math.auburn.edu>

2003-07-07  Lutz Mueller <lutz@users.sourceforge.net>

	* library.c